public/stylesheets/main.css
/* ... */
/* The message bar is used to present feedback on user actions, such as indications
 * of success or failure. 
 */
div#msgbar {
    border: 1px solid red;
    background-color: pink;
    margin-top: 10px;
    text-align: center;
    padding: 3px;
    display: none;
}

/* This style adds a loading graphic to the YUI tab view */
.yui-navset div.loading div {
    background:url(/lib/2.8.0r4/build/assets/skins/sam/ajax-loader.gif) no-repeat center center;
    height:8em; /* hold some space while loading */
}

/* The following styles are for the organization tree view icons */
.agency {
	display:block;
	padding-left: 20px; 
	background: url(/images/agency-small.png) no-repeat;
}

.bureau {
	display:block;
	padding-left: 20px; 
	background: url(/images/bureau-small.png) no-repeat;
}

.organization {
	display:block;
	padding-left: 20px; 
	background: url(/images/organization-small.png) no-repeat;
}

.gss {
	display:block;
	padding-left: 20px; 
	background: url(/images/gss-small.png) no-repeat;
}

.major {
	display:block;
	padding-left: 20px; 
	background: url(/images/major-small.png) no-repeat;
}

.minor {
	display:block;
	padding-left: 20px; 
	background: url(/images/minor-small.png) no-repeat;
}

/* 
Styles for displaying system documentation
*/
table.systemDocuments {
    border: 1px solid lightgrey;
}

table.systemDocuments th {
    font-weight: bold;
    padding: 10px;
    background: lightgrey;
}

table.systemDocuments td {
    padding: 10px;
    margin-top: 10px;
}

table.systemDocuments td:first-child:hover {
    border: 1px solid orange;
    background-color: #fff0c5;
    margin-top: 10px;
}

table.systemDocuments td a {
    color: black;
}

table.systemDocuments td img {
	float: left;
	margin-right: 10px;
}

#testEmailRecipient {
    /* Styles for displaying the element of email recipinent */
    height: 20px;
    width: 220px;
    margin-left: 10px;
}

input#product.yui-ac-input {
    position: relative;
}

div#product_ac_container {
    position: relative;
    top: 0px;
    width: 234px;
}

div.yui-ac-content[style] {
    height: auto !important;
    width: auto !important;
    margin-top: 5px;
}

div.yui-ac-bd {
    overflow: auto;
    overflow-x: hidden;
    height: auto !important;
    max-height: 200px;
}

.yui-ac-content ul {
    margin-right: 20px !important;
}

ul.treelist li {
    list-style: none;
}

div#TabView_UserView_TabViewContainer {
    float: left;
    margin-top: 14px;
    max-width: 60%;
}

div.section > div > div.clear {
    display: none;
}

div.section > div.form_box > form > div.clear {
    display: none;
}

/* Styles for Zend_Form default decorator */

form dl.zend_form {
    margin-left: auto;
    margin-right: auto;
}

form dl.zend_form dt, form dl.zend_form dd {
    font-weight: bold;
    margin: 5px;
}

